# copilot-agent

./: .env.example  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  license.md  rust-toolchain.toml
.cargo/: config.toml
.claude-flow/metrics/: system-metrics.json
.github/workflows/: ci.yml  test.yml
api/: API_CONTRACTS_COMPLETE.md  API_CONTRACTS_DOCUMENTATION.md  API_CONTRACTS_SUMMARY.md  API_QUICK_REFERENCE.md  ERROR_CODE_REFERENCE.md  README.md
api/contracts/: error_codes.rs  versioning.rs  websocket_jsonrpc.rs
api/proto/: service.proto
api/schemas/: openapi.yaml
api/validation/: mod.rs
apps/copilot-cli/src/: main.rs
apps/copilot-server/: Cargo.toml
apps/copilot-server/src/: app.rs  cli.rs  main.rs  server.rs  telemetry.rs
benches/: benchmarks.rs
config/: database.yaml  default.toml
crates/copilot-adapters/: Cargo.toml
crates/copilot-adapters/src/: circuit_breaker.rs  incident.rs  lib.rs  observatory.rs  orchestrator.rs  retry.rs  testbench.rs  traits.rs
crates/copilot-api/: Cargo.toml
crates/copilot-api/src/: error.rs  lib.rs  types.rs
crates/copilot-api/src/grpc/: mod.rs  service.rs
crates/copilot-api/src/rest/: execution_middleware.rs  handlers.rs  middleware.rs  mod.rs  router.rs
crates/copilot-api/src/websocket/: handler.rs  mod.rs
crates/copilot-context/: Cargo.toml  README.md
crates/copilot-context/examples/: basic_usage.rs
crates/copilot-context/src/: compression.rs  engine.rs  lib.rs  memory.rs  retrieval.rs
crates/copilot-conversation/: Cargo.toml
crates/copilot-conversation/src/: history.rs  lib.rs  manager.rs  session.rs  streaming.rs
crates/copilot-core/: Cargo.toml
crates/copilot-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/copilot-core/src/agents/: contracts.rs  decomposer.rs  execution_graph.rs  mod.rs  telemetry.rs
crates/copilot-infra/: Cargo.toml
crates/copilot-infra/src/: health.rs  lib.rs
crates/copilot-infra/src/cache/: mod.rs  redis.rs
crates/copilot-infra/src/database/: migrations.rs  mod.rs  pool.rs  repositories.rs
crates/copilot-infra/src/messaging/: mod.rs  nats.rs
crates/copilot-nlp/: Cargo.toml
crates/copilot-nlp/src/: engine.rs  entity.rs  intent.rs  lib.rs  query.rs
crates/copilot-observability/src/: correlation.rs
crates/copilot-workflow/: Cargo.toml
crates/copilot-workflow/src/: approval.rs  dag.rs  engine.rs  execution.rs  lib.rs  step.rs
deploy/helm/: Chart.yaml  values.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
deployment/: DEPLOYMENT-FILES-INDEX.md  README.md  SECURITY-HARDENING-INDEX.md  SECURITY-HARDENING-PART2.md  SECURITY-HARDENING-PART3.md  SECURITY-HARDENING-SUMMARY.md  SECURITY-HARDENING.md
deployment/ci-cd/: argocd-application.yaml  github-actions-cd.yaml  github-actions-ci.yaml
deployment/compliance/: soc2-evidence-collection.yaml
deployment/docker/: .dockerignore  Dockerfile
deployment/gcp/intelligence-layer/: Dockerfile  agent-bundle.js  deploy.sh  server.js  service.yaml
deployment/gcp/llm-connector-hub/: Dockerfile  cli-commands.md  cloudbuild.yaml  deploy.sh  iam-setup.sh  rollback.sh  service.yaml  verify-deployment.sh
deployment/helm/llm-copilot-agent/: Chart.yaml  values.yaml
deployment/kubernetes/base/: configmap.yaml  deployment.yaml  disaster-recovery.yaml  hpa.yaml  ingress.yaml  istio-virtualservice.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  postgres-ha.yaml  secret.yaml  (+4 more)
deployment/observability/: grafana-dashboard.json  jaeger-config.yaml  loki-config.yaml  prometheus-config.yaml
deployment/security/: README.md  SECURITY-TESTING-PROCEDURES.md
deployment/terraform/: main.tf  variables.tf
docs/: OBJECTIVES-AND-FEATURES.md  README.md  SPECIFICATION.md  architecture-diagram.md  core-algorithms-pseudocode.md  incident-algorithms-summary.md  incident-detection-response-algorithms.md  pseudocode-summary.md  specification-summary.md  specification.md  users-and-design-principles.md
docs/architecture/: 00-core-engines-overview.md  01-nlp-engine-architecture.md  02-context-engine-architecture.md  03-workflow-engine-architecture.md  04-response-streaming-architecture.md  05-integration-architecture.md  06-data-storage-persistence-architecture.md  COMPLETE_ARCHITECTURE_DIAGRAM.md  DATA_LAYER_QUICK_REFERENCE.md  DATA_STORAGE_ARCHITECTURE.md  DATA_STORAGE_DELIVERABLES.md  DELIVERABLES.md  README.md  context-memory-systems.md
functions/: .gcloudignore  .gitignore  index.js  jest.config.js  package.json  tsconfig.json
functions/src/: cors.ts  envelope.ts  handler.test.ts  health.ts  index.ts  router.ts
migrations/: V001_initial_schema.sql
monitoring/: QUICK-REFERENCE.md  README.md  alertmanager-config.yaml  distributed-tracing-config.yaml  grafana-dashboards.json  log-aggregation-config.yaml  metrics-catalog.yaml  prometheus-alert-rules.yaml  prometheus-recording-rules.yaml  sli-slo-definitions.yaml
monitoring/examples/: instrumentation-example.ts
plans/: ARCHITECTURE_SUMMARY.md  LLM-CoPilot-Agent-Architecture.md  LLM-CoPilot-Agent-Completion.md  LLM-CoPilot-Agent-Pseudocode.md  LLM-CoPilot-Agent-Refinement.md  LLM-CoPilot-Agent-Specification.md
scripts/: backup_postgres.sh  pre-commit
security-architecture/: 01-authentication-architecture.md  02-authorization-architecture.md  03-data-protection-architecture.md  04-input-validation-sanitization.md  05-audit-compliance-architecture.md  06-security-monitoring-architecture.md  README.md
services/llm-connector-hub/: package.json
tests/: Cargo.toml  README.md  TESTING_DELIVERABLES.txt  TESTING_DELIVERABLES_SUMMARY.md  TESTING_IMPLEMENTATION.md  TESTING_QUICK_REFERENCE.md  TESTING_QUICK_START.md  TESTING_STRATEGY.md  TEST_IMPLEMENTATION_COMPLETE.md
tests/common/: assertions.rs  database.rs  fixtures.rs  mocks.rs  mod.rs
tests/fixtures/: data.json
tests/integration/: api_tests.rs  conversation_tests.rs  mod.rs  workflow_tests.rs
tests/performance/: check_performance.py  smoke_test.js
(+135 files in other folders)
