[package]
name = "copilot-adapters"
version = "0.1.0"
edition = "2021"
authors = ["LLM CoPilot Agent Team"]
description = "Adapter implementations for LLM CoPilot Agent modules"
license = "SEE LICENSE IN LICENSE.md"

[dependencies]
copilot-core = { path = "../copilot-core" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
thiserror = "1.0"
anyhow = "1.0"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
