[package]
name = "copilot-api"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE.md"
description = "API layer for LLM CoPilot Agent"

[dependencies]
# Internal dependencies
copilot-core = { path = "../copilot-core" }
copilot-conversation = { path = "../copilot-conversation" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "util"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC
tonic = "0.12"
prost = "0.13"

# Async traits
async-trait = "0.1"
futures = "0.3"

# Logging and tracing
tracing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Authentication
jsonwebtoken = "9.3"

# Rate limiting
governor = "0.6"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP types
http = "1.1"
http-body-util = "0.1"

# WebSocket
axum-extra = { version = "0.9", features = ["typed-header"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.4", features = ["full"] }

[features]
default = ["rest", "websocket", "grpc"]
rest = []
websocket = []
grpc = []
