[package]
name = "copilot-context"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
copilot-core = { path = "../copilot-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Token counting
tiktoken-rs = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Collections and data structures
dashmap = "5.5"  # Concurrent hashmap
priority-queue = "1.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
pretty_assertions = "1.4"
tracing-subscriber = "0.3"
