[package]
name = "copilot-conversation"
version = "0.1.0"
edition = "2021"
authors = ["LLM CoPilot Agent Team"]
description = "Conversation management for LLM CoPilot Agent"
license = "SEE LICENSE IN LICENSE.md"

[dependencies]
# Internal dependencies
copilot-core = { path = "../copilot-core" }
copilot-nlp = { path = "../copilot-nlp" }
copilot-context = { path = "../copilot-context" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
