[package]
name = "copilot-core"
version = "0.1.0"
edition = "2021"
authors = ["LLM DevOps Team"]
license = "Proprietary"
description = "Core types, traits, and configurations for LLM-CoPilot-Agent"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration management
config = "0.14"

# Secret management
secrecy = { version = "0.8", features = ["serde"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-test = "0.4"
