[package]
name = "copilot-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
copilot-core = { path = "../copilot-core" }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Messaging
async-nats = "0.33"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
